@@ -24,22 +24,21 @@ import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.xml.security.utils.Base64;
 
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Encoder;
 
 import com.ric.st.FileExchanges;
 
 public class FileExchange implements FileExchanges {
 
-	public void send2()  {
-		
-		
-		
-	}
+    public void send2() {
 
-	
-	public String send() throws ClientProtocolException, IOException, NoSuchAlgorithmException {
-		String fileStore = "homemanagement";
-				CredentialsProvider credsProvider = new BasicCredentialsProvider();
+
+    }
+
+
+    public String send() throws ClientProtocolException, IOException, NoSuchAlgorithmException {
+        String fileStore = "homemanagement";
+        CredentialsProvider credsProvider = new BasicCredentialsProvider();
         credsProvider.setCredentials(
                 new AuthScope("127.0.0.1", 8085),
                 new UsernamePasswordCredentials("lanit", "tv,n8!Ya"));
@@ -53,33 +52,33 @@ public class FileExchange implements FileExchanges {
         BufferedInputStream in = new BufferedInputStream(new FileInputStream("c:\\temp\\#26\\scan.jpg"));
         int theByte = 0;
         while ((theByte = in.read()) != -1) {
-          md.update((byte) theByte);
+            md.update((byte) theByte);
         }
         in.close();
         byte[] theDigest = md.digest();
-        System.out.println("CHECK MEEEE!"+new BASE64Encoder().encode(theDigest));
-        
+        //System.out.println("CHECK MEEEE!" + Base64.encode(theDigest));
+
 /*        byte[] bytes = IOUtils.toByteArray(new FileInputStream("/home/zinin/tmp/xxx.pdf")); //госту 34.11
         MessageDigest digest = MessageDigest.getInstance(GostConsts.GOST_DIGEST_ALGORITHM_NAME, CommonConstants.TRUSTED_JAVA_PROVIDER);
         byte[] result = digest.digest(bytes);
-        System.out.println(("hash: " + new String(Hex.encodeHex(result, true))));        
-*/        
-        
+        System.out.println(("hash: " + new String(Hex.encodeHex(result, true))));
+*/
+
         String str = Base64.encode(FileUtils.readFileToByteArray(file));
 
-        HttpPut post = new HttpPut("http://127.0.0.1:8085/ext-bus-file-store-service/rest/"+fileStore);
-        
+        HttpPut post = new HttpPut("http://127.0.0.1:8085/ext-bus-file-store-service/rest/" + fileStore);
+
         System.out.println("##START##");
-        
+
         System.out.println(str);
 
         System.out.println("##END##");
-        
-        // 
+
+        //
         MultipartEntityBuilder builder = MultipartEntityBuilder.create();
         //builder.setMode(HttpMultipartMode.BROWSER_COMPATIBLE);
         builder.setMode(HttpMultipartMode.BROWSER_COMPATIBLE);
-        
+
         //builder.addPart("upfile", fileBody);
         //builder.addBinaryBody("somename", file, ContentType.APPLICATION_OCTET_STREAM, "scan.jpg");
         //builder.addBinaryBody("somename", str.getBytes(), ContentType., "scan.jpg"); //[zxt91stNQ8EQkWRHnvyZ+Q==]
@@ -87,22 +86,23 @@ public class FileExchange implements FileExchanges {
         //builder.addTextBody("somename", str);
         //post.setHeader("Content-MD5", DigestUtils.md .md5(str).toString());
         //builder.addPart(bodyPart);
-        
+
         builder.setContentType(ContentType.DEFAULT_BINARY);
-        post.setHeader("Content-MD5", new BASE64Encoder().encode(theDigest));
+        post.setHeader("Content-MD5", Base64.encode(theDigest)
+        );
         //post.setHeader("Content-MD5", Base64.encode(hashtext.getBytes()));
         post.setHeader("X-Upload-OrgPPAGUID", "b9fe4d27-020d-44dc-8bfd-b5972a504f45");
         post.setHeader("X-Upload-Filename", "scan.jpg");
-        
+
         FileEntity enF = new FileEntity(file);
         post.setEntity(enF);
         //builder.setBoundary("");
         //post
-        
+
         //J/MSPJQzBMOfBoA8QZbn8Q==
         //digest [6zAHDz10f4g8qYfSYT0V9Q==] of the received content. FileGuid is 5d72493e-adb2-4d3a-bba1-4b7202ee7a41.
 
-        
+
         //HttpEntity entity = builder.build();
         //
         //post.setEntity(entity);
@@ -110,35 +110,34 @@ public class FileExchange implements FileExchanges {
         //System.out.println("GIS HEAD1:"+response.getHeaders("X-Upload-UploadID"));
 
         org.apache.http.Header[] hd = response.getAllHeaders();
-        
+
         String fileGuid = null;
-        for (int i=0; i < hd.length ; i++) {
-            System.out.println("GIS HEAD2:"+hd[i].getName());
-            System.out.println("GIS HEAD2:"+hd[i].getValue());
+        for (int i = 0; i < hd.length; i++) {
+            System.out.println("GIS HEAD2:" + hd[i].getName());
+            System.out.println("GIS HEAD2:" + hd[i].getValue());
             if (hd[i].getName().equals("X-Upload-UploadID")) {
-            	fileGuid = hd[i].getValue();
+                fileGuid = hd[i].getValue();
             }
         }
-        
-        
-        HttpHead head = new HttpHead("http://127.0.0.1:8085/ext-bus-file-store-service/rest/"+fileStore+"/"+fileGuid);
+
+
+        HttpHead head = new HttpHead("http://127.0.0.1:8085/ext-bus-file-store-service/rest/" + fileStore + "/" + fileGuid);
         head.setHeader("X-Upload-OrgPPAGUID", "b9fe4d27-020d-44dc-8bfd-b5972a504f45");
         response = httpclient.execute(head);
-        
-        System.out.println("HEAD RESPONSE:"+response.getAllHeaders().toString());
-        
+
+        System.out.println("HEAD RESPONSE:" + response.getAllHeaders().toString());
+
         hd = response.getAllHeaders();
 
-        for (int i=0; i < hd.length ; i++) {
-            System.out.println("GIS HEAD3:"+hd[i].getName());
-            System.out.println("GIS HEAD3:"+hd[i].getValue());
+        for (int i = 0; i < hd.length; i++) {
+            System.out.println("GIS HEAD3:" + hd[i].getName());
+            System.out.println("GIS HEAD3:" + hd[i].getValue());
         }
 
         httpclient.close();
-        
+
         return fileGuid;
-        
-        
-        
-	}
+
+
+    }
 }
